hw2/y.output
Terminals unused in grammar

    COMMA
    MOD


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement
    3              | Statement

    4 Type: TypeName
    5     | ArrayType

    6 TypeName: INT
    7         | FLOAT
    8         | STRING
    9         | BOOL

   10 ArrayType: LBRACK Expression RBRACK Type

   11 Expression: Expression LO B1
   12           | B1

   13 B1: B1 LA B2
   14   | B2

   15 B2: B2 Cmp_op B3
   16   | B3

   17 B3: B3 Add_op B4
   18   | B4

   19 B4: B4 Mul_op UnaryExpr
   20   | UnaryExpr

   21 UnaryExpr: PrimaryExpr
   22          | Unary_op UnaryExpr

   23 LA: LAND

   24 LO: LOR

   25 Cmp_op: EQL
   26       | NEQ
   27       | LSS
   28       | LEQ
   29       | GTR
   30       | GEQ

   31 Add_op: ADD
   32       | SUB

   33 Mul_op: MUL
   34       | QUO
   35       | REM

   36 Unary_op: ADD
   37         | SUB
   38         | NOT

   39 PrimaryExpr: Operand
   40            | IndexExpr
   41            | ConversionExpr

   42 Operand: Literal
   43        | IDENT
   44        | LPAREN Expression RPAREN

   45 Literal: INT_LIT
   46        | FLOAT_LIT
   47        | BOOL_LIT
   48        | STRING_LIT
   49        | TRUE
   50        | FALSE

   51 IndexExpr: PrimaryExpr LBRACK Expression RBRACK

   52 ConversionExpr: Type LPAREN Expression RPAREN

   53 Statement: DeclarationStmt NEWLINE
   54          | SimpleStmt NEWLINE
   55          | Block NEWLINE
   56          | IfStmt NEWLINE
   57          | ForStmt NEWLINE
   58          | PrintStmt NEWLINE
   59          | NEWLINE

   60 SimpleStmt: AssignmentStmt
   61           | Expression
   62           | IncDecStmt

   63 DeclarationStmt: VAR IDENT Type DeclarationAssign

   64 DeclarationAssign: ASSIGN Expression
   65                  | %empty

   66 AssignmentStmt: ExpressionVar Assign_op Expression

   67 ExpressionVar: Expression

   68 Assign_op: ASSIGN
   69          | ADD_ASSIGN
   70          | SUB_ASSIGN
   71          | MUL_ASSIGN
   72          | QUO_ASSIGN
   73          | REM_ASSIGN

   74 IncDecStmt: Expression IncDec

   75 IncDec: INC
   76       | DEC

   77 $@1: %empty

   78 $@2: %empty

   79 Block: LBRACE $@1 StatementList $@2 RBRACE

   80 IfStmt: IF Condition Block
   81       | IF Condition Block ELSE IfStmt
   82       | IF Condition Block ELSE Block

   83 Condition: Expression

   84 ForStmt: FOR ForCondition Block

   85 ForCondition: Condition
   86             | ForClause

   87 ForClause: InitStmt SEMICOLON Condition SEMICOLON PosStmt

   88 InitStmt: SimpleStmt

   89 PosStmt: SimpleStmt

   90 PrintStmt: PrintType LPAREN Expression RPAREN

   91 PrintType: PRINT
   92          | PRINTLN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 44 52 90
    RPAREN (259) 44 52 90
    LBRACK (260) 10 51
    RBRACK (261) 10 51
    LBRACE (262) 79
    RBRACE (263) 79
    SEMICOLON (264) 87
    COMMA (265)
    NEWLINE (266) 53 54 55 56 57 58 59
    ADD (267) 31 36
    SUB (268) 32 37
    MUL (269) 33
    QUO (270) 34
    MOD (271)
    INC (272) 75
    DEC (273) 76
    REM (274) 35
    LSS (275) 27
    GTR (276) 29
    LEQ (277) 28
    GEQ (278) 30
    EQL (279) 25
    NEQ (280) 26
    ASSIGN (281) 64 68
    ADD_ASSIGN (282) 69
    SUB_ASSIGN (283) 70
    MUL_ASSIGN (284) 71
    QUO_ASSIGN (285) 72
    REM_ASSIGN (286) 73
    LAND (287) 23
    LOR (288) 24
    NOT (289) 38
    TRUE (290) 49
    FALSE (291) 50
    IF (292) 80 81 82
    ELSE (293) 81 82
    FOR (294) 84
    VAR (295) 63
    PRINT (296) 91
    PRINTLN (297) 92
    IDENT <string> (298) 43 63
    INT <string> (299) 6
    FLOAT <string> (300) 7
    BOOL <string> (301) 9
    STRING <string> (302) 8
    INT_LIT <i_val> (303) 45
    FLOAT_LIT <f_val> (304) 46
    STRING_LIT <string> (305) 48
    BOOL_LIT <b_val> (306) 47


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    Program (53)
        on left: 1
        on right: 0
    StatementList (54)
        on left: 2 3
        on right: 1 2 79
    Type <string> (55)
        on left: 4 5
        on right: 10 52 63
    TypeName <string> (56)
        on left: 6 7 8 9
        on right: 4
    ArrayType <string> (57)
        on left: 10
        on right: 5
    Expression <string> (58)
        on left: 11 12
        on right: 10 11 44 51 52 61 64 66 67 74 83 90
    B1 <string> (59)
        on left: 13 14
        on right: 11 12 13
    B2 <string> (60)
        on left: 15 16
        on right: 13 14 15
    B3 <string> (61)
        on left: 17 18
        on right: 15 16 17
    B4 <string> (62)
        on left: 19 20
        on right: 17 18 19
    UnaryExpr <string> (63)
        on left: 21 22
        on right: 19 20 22
    LA <string> (64)
        on left: 23
        on right: 13
    LO <string> (65)
        on left: 24
        on right: 11
    Cmp_op <string> (66)
        on left: 25 26 27 28 29 30
        on right: 15
    Add_op <string> (67)
        on left: 31 32
        on right: 17
    Mul_op <string> (68)
        on left: 33 34 35
        on right: 19
    Unary_op <string> (69)
        on left: 36 37 38
        on right: 22
    PrimaryExpr <string> (70)
        on left: 39 40 41
        on right: 21 51
    Operand <string> (71)
        on left: 42 43 44
        on right: 39
    Literal <string> (72)
        on left: 45 46 47 48 49 50
        on right: 42
    IndexExpr <string> (73)
        on left: 51
        on right: 40
    ConversionExpr <string> (74)
        on left: 52
        on right: 41
    Statement (75)
        on left: 53 54 55 56 57 58 59
        on right: 2 3
    SimpleStmt (76)
        on left: 60 61 62
        on right: 54 88 89
    DeclarationStmt (77)
        on left: 63
        on right: 53
    DeclarationAssign (78)
        on left: 64 65
        on right: 63
    AssignmentStmt (79)
        on left: 66
        on right: 60
    ExpressionVar <string> (80)
        on left: 67
        on right: 66
    Assign_op <string> (81)
        on left: 68 69 70 71 72 73
        on right: 66
    IncDecStmt (82)
        on left: 74
        on right: 62
    IncDec (83)
        on left: 75 76
        on right: 74
    Block (84)
        on left: 79
        on right: 55 80 81 82 84
    $@1 (85)
        on left: 77
        on right: 79
    $@2 (86)
        on left: 78
        on right: 79
    IfStmt (87)
        on left: 80 81 82
        on right: 56 81
    Condition (88)
        on left: 83
        on right: 80 81 82 85 87
    ForStmt (89)
        on left: 84
        on right: 57
    ForCondition (90)
        on left: 85 86
        on right: 84
    ForClause (91)
        on left: 87
        on right: 86
    InitStmt (92)
        on left: 88
        on right: 87
    PosStmt (93)
        on left: 89
        on right: 87
    PrintStmt (94)
        on left: 90
        on right: 58
    PrintType <string> (95)
        on left: 91 92
        on right: 90


State 0

    0 $accept: . Program $end

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Program          go to state 24
    StatementList    go to state 25
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 41
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    ForStmt          go to state 49
    PrintStmt        go to state 50
    PrintType        go to state 51


State 1

   44 Operand: LPAREN . Expression RPAREN

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 52
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 2

   10 ArrayType: LBRACK . Expression RBRACK Type

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 53
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 3

   79 Block: LBRACE . $@1 StatementList $@2 RBRACE

    $default  reduce using rule 77 ($@1)

    $@1  go to state 54


State 4

   59 Statement: NEWLINE .

    $default  reduce using rule 59 (Statement)


State 5

   36 Unary_op: ADD .

    $default  reduce using rule 36 (Unary_op)


State 6

   37 Unary_op: SUB .

    $default  reduce using rule 37 (Unary_op)


State 7

   38 Unary_op: NOT .

    $default  reduce using rule 38 (Unary_op)


State 8

   49 Literal: TRUE .

    $default  reduce using rule 49 (Literal)


State 9

   50 Literal: FALSE .

    $default  reduce using rule 50 (Literal)


State 10

   80 IfStmt: IF . Condition Block
   81       | IF . Condition Block ELSE IfStmt
   82       | IF . Condition Block ELSE Block

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 55
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40
    Condition       go to state 56


State 11

   84 ForStmt: FOR . ForCondition Block

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 57
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40
    SimpleStmt      go to state 58
    AssignmentStmt  go to state 44
    ExpressionVar   go to state 45
    IncDecStmt      go to state 46
    Condition       go to state 59
    ForCondition    go to state 60
    ForClause       go to state 61
    InitStmt        go to state 62


State 12

   63 DeclarationStmt: VAR . IDENT Type DeclarationAssign

    IDENT  shift, and go to state 63


State 13

   91 PrintType: PRINT .

    $default  reduce using rule 91 (PrintType)


State 14

   92 PrintType: PRINTLN .

    $default  reduce using rule 92 (PrintType)


State 15

   43 Operand: IDENT .

    $default  reduce using rule 43 (Operand)


State 16

    6 TypeName: INT .

    $default  reduce using rule 6 (TypeName)


State 17

    7 TypeName: FLOAT .

    $default  reduce using rule 7 (TypeName)


State 18

    9 TypeName: BOOL .

    $default  reduce using rule 9 (TypeName)


State 19

    8 TypeName: STRING .

    $default  reduce using rule 8 (TypeName)


State 20

   45 Literal: INT_LIT .

    $default  reduce using rule 45 (Literal)


State 21

   46 Literal: FLOAT_LIT .

    $default  reduce using rule 46 (Literal)


State 22

   48 Literal: STRING_LIT .

    $default  reduce using rule 48 (Literal)


State 23

   47 Literal: BOOL_LIT .

    $default  reduce using rule 47 (Literal)


State 24

    0 $accept: Program . $end

    $end  shift, and go to state 64


State 25

    1 Program: StatementList .
    2 StatementList: StatementList . Statement

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    $default  reduce using rule 1 (Program)

    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 65
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    ForStmt          go to state 49
    PrintStmt        go to state 50
    PrintType        go to state 51


State 26

   52 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 66


State 27

    4 Type: TypeName .

    $default  reduce using rule 4 (Type)


State 28

    5 Type: ArrayType .

    $default  reduce using rule 5 (Type)


State 29

   11 Expression: Expression . LO B1
   61 SimpleStmt: Expression .
   67 ExpressionVar: Expression .
   74 IncDecStmt: Expression . IncDec

    INC  shift, and go to state 67
    DEC  shift, and go to state 68
    LOR  shift, and go to state 69

    LBRACE    reduce using rule 61 (SimpleStmt)
    NEWLINE   reduce using rule 61 (SimpleStmt)
    $default  reduce using rule 67 (ExpressionVar)

    LO      go to state 70
    IncDec  go to state 71


State 30

   12 Expression: B1 .
   13 B1: B1 . LA B2

    LAND  shift, and go to state 72

    $default  reduce using rule 12 (Expression)

    LA  go to state 73


State 31

   14 B1: B2 .
   15 B2: B2 . Cmp_op B3

    LSS  shift, and go to state 74
    GTR  shift, and go to state 75
    LEQ  shift, and go to state 76
    GEQ  shift, and go to state 77
    EQL  shift, and go to state 78
    NEQ  shift, and go to state 79

    $default  reduce using rule 14 (B1)

    Cmp_op  go to state 80


State 32

   16 B2: B3 .
   17 B3: B3 . Add_op B4

    ADD  shift, and go to state 81
    SUB  shift, and go to state 82

    $default  reduce using rule 16 (B2)

    Add_op  go to state 83


State 33

   18 B3: B4 .
   19 B4: B4 . Mul_op UnaryExpr

    MUL  shift, and go to state 84
    QUO  shift, and go to state 85
    REM  shift, and go to state 86

    $default  reduce using rule 18 (B3)

    Mul_op  go to state 87


State 34

   20 B4: UnaryExpr .

    $default  reduce using rule 20 (B4)


State 35

   22 UnaryExpr: Unary_op . UnaryExpr

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    UnaryExpr       go to state 88
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 36

   21 UnaryExpr: PrimaryExpr .
   51 IndexExpr: PrimaryExpr . LBRACK Expression RBRACK

    LBRACK  shift, and go to state 89

    $default  reduce using rule 21 (UnaryExpr)


State 37

   39 PrimaryExpr: Operand .

    $default  reduce using rule 39 (PrimaryExpr)


State 38

   42 Operand: Literal .

    $default  reduce using rule 42 (Operand)


State 39

   40 PrimaryExpr: IndexExpr .

    $default  reduce using rule 40 (PrimaryExpr)


State 40

   41 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 41 (PrimaryExpr)


State 41

    3 StatementList: Statement .

    $default  reduce using rule 3 (StatementList)


State 42

   54 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 90


State 43

   53 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 91


State 44

   60 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 60 (SimpleStmt)


State 45

   66 AssignmentStmt: ExpressionVar . Assign_op Expression

    ASSIGN      shift, and go to state 92
    ADD_ASSIGN  shift, and go to state 93
    SUB_ASSIGN  shift, and go to state 94
    MUL_ASSIGN  shift, and go to state 95
    QUO_ASSIGN  shift, and go to state 96
    REM_ASSIGN  shift, and go to state 97

    Assign_op  go to state 98


State 46

   62 SimpleStmt: IncDecStmt .

    $default  reduce using rule 62 (SimpleStmt)


State 47

   55 Statement: Block . NEWLINE

    NEWLINE  shift, and go to state 99


State 48

   56 Statement: IfStmt . NEWLINE

    NEWLINE  shift, and go to state 100


State 49

   57 Statement: ForStmt . NEWLINE

    NEWLINE  shift, and go to state 101


State 50

   58 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 102


State 51

   90 PrintStmt: PrintType . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 103


State 52

   11 Expression: Expression . LO B1
   44 Operand: LPAREN Expression . RPAREN

    RPAREN  shift, and go to state 104
    LOR     shift, and go to state 69

    LO  go to state 70


State 53

   10 ArrayType: LBRACK Expression . RBRACK Type
   11 Expression: Expression . LO B1

    RBRACK  shift, and go to state 105
    LOR     shift, and go to state 69

    LO  go to state 70


State 54

   79 Block: LBRACE $@1 . StatementList $@2 RBRACE

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    LBRACE      shift, and go to state 3
    NEWLINE     shift, and go to state 4
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IF          shift, and go to state 10
    FOR         shift, and go to state 11
    VAR         shift, and go to state 12
    PRINT       shift, and go to state 13
    PRINTLN     shift, and go to state 14
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    StatementList    go to state 106
    Type             go to state 26
    TypeName         go to state 27
    ArrayType        go to state 28
    Expression       go to state 29
    B1               go to state 30
    B2               go to state 31
    B3               go to state 32
    B4               go to state 33
    UnaryExpr        go to state 34
    Unary_op         go to state 35
    PrimaryExpr      go to state 36
    Operand          go to state 37
    Literal          go to state 38
    IndexExpr        go to state 39
    ConversionExpr   go to state 40
    Statement        go to state 41
    SimpleStmt       go to state 42
    DeclarationStmt  go to state 43
    AssignmentStmt   go to state 44
    ExpressionVar    go to state 45
    IncDecStmt       go to state 46
    Block            go to state 47
    IfStmt           go to state 48
    ForStmt          go to state 49
    PrintStmt        go to state 50
    PrintType        go to state 51


State 55

   11 Expression: Expression . LO B1
   83 Condition: Expression .

    LOR  shift, and go to state 69

    $default  reduce using rule 83 (Condition)

    LO  go to state 70


State 56

   80 IfStmt: IF Condition . Block
   81       | IF Condition . Block ELSE IfStmt
   82       | IF Condition . Block ELSE Block

    LBRACE  shift, and go to state 3

    Block  go to state 107


State 57

   11 Expression: Expression . LO B1
   61 SimpleStmt: Expression .
   67 ExpressionVar: Expression .
   74 IncDecStmt: Expression . IncDec
   83 Condition: Expression .

    INC  shift, and go to state 67
    DEC  shift, and go to state 68
    LOR  shift, and go to state 69

    LBRACE     reduce using rule 83 (Condition)
    SEMICOLON  reduce using rule 61 (SimpleStmt)
    $default   reduce using rule 67 (ExpressionVar)

    LO      go to state 70
    IncDec  go to state 71


State 58

   88 InitStmt: SimpleStmt .

    $default  reduce using rule 88 (InitStmt)


State 59

   85 ForCondition: Condition .

    $default  reduce using rule 85 (ForCondition)


State 60

   84 ForStmt: FOR ForCondition . Block

    LBRACE  shift, and go to state 3

    Block  go to state 108


State 61

   86 ForCondition: ForClause .

    $default  reduce using rule 86 (ForCondition)


State 62

   87 ForClause: InitStmt . SEMICOLON Condition SEMICOLON PosStmt

    SEMICOLON  shift, and go to state 109


State 63

   63 DeclarationStmt: VAR IDENT . Type DeclarationAssign

    LBRACK  shift, and go to state 2
    INT     shift, and go to state 16
    FLOAT   shift, and go to state 17
    BOOL    shift, and go to state 18
    STRING  shift, and go to state 19

    Type       go to state 110
    TypeName   go to state 27
    ArrayType  go to state 28


State 64

    0 $accept: Program $end .

    $default  accept


State 65

    2 StatementList: StatementList Statement .

    $default  reduce using rule 2 (StatementList)


State 66

   52 ConversionExpr: Type LPAREN . Expression RPAREN

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    Expression      go to state 111
    B1              go to state 30
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 67

   75 IncDec: INC .

    $default  reduce using rule 75 (IncDec)


State 68

   76 IncDec: DEC .

    $default  reduce using rule 76 (IncDec)


State 69

   24 LO: LOR .

    $default  reduce using rule 24 (LO)


State 70

   11 Expression: Expression LO . B1

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B1              go to state 112
    B2              go to state 31
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 71

   74 IncDecStmt: Expression IncDec .

    $default  reduce using rule 74 (IncDecStmt)


State 72

   23 LA: LAND .

    $default  reduce using rule 23 (LA)


State 73

   13 B1: B1 LA . B2

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B2              go to state 113
    B3              go to state 32
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 74

   27 Cmp_op: LSS .

    $default  reduce using rule 27 (Cmp_op)


State 75

   29 Cmp_op: GTR .

    $default  reduce using rule 29 (Cmp_op)


State 76

   28 Cmp_op: LEQ .

    $default  reduce using rule 28 (Cmp_op)


State 77

   30 Cmp_op: GEQ .

    $default  reduce using rule 30 (Cmp_op)


State 78

   25 Cmp_op: EQL .

    $default  reduce using rule 25 (Cmp_op)


State 79

   26 Cmp_op: NEQ .

    $default  reduce using rule 26 (Cmp_op)


State 80

   15 B2: B2 Cmp_op . B3

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B3              go to state 114
    B4              go to state 33
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 81

   31 Add_op: ADD .

    $default  reduce using rule 31 (Add_op)


State 82

   32 Add_op: SUB .

    $default  reduce using rule 32 (Add_op)


State 83

   17 B3: B3 Add_op . B4

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23

    Type            go to state 26
    TypeName        go to state 27
    ArrayType       go to state 28
    B4              go to state 115
    UnaryExpr       go to state 34
    Unary_op        go to state 35
    PrimaryExpr     go to state 36
    Operand         go to state 37
    Literal         go to state 38
    IndexExpr       go to state 39
    ConversionExpr  go to state 40


State 84

   33 Mul_op: MUL .

    $default  reduce using rule 33 (Mul_op)


State 85

   34 Mul_op: QUO .

    $default  reduce using rule 34 (Mul_op)


State 86

   35 Mul_op: REM .

    $default  reduce using rule 35 (Mul_op)


State 87

   19 B4: B4 Mul_op . UnaryExpr

    LPAREN      shift, and go to state 1
    LBRACK      shift, and go to state 2
    ADD         shift, and go to state 5
    SUB         shift, and go to state 6
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 8
    FALSE       shift, and go to state 9
    IDENT       shift, and go to state 15
    INT         shift, and go to state 16
    FLOAT       shift, and go to state 17
    BOOL        shift, and go to state 18
    STRING      shift, and go to state 19
    INT_LIT     shift, and go to state 20
    FLOAT_LIT   shift, and go to state 21
    STRING_LIT  shift, and go to state 22
    BOOL_LIT    shift, and go to state 23
